--- a/code/readme
+++ b/code/readme
@@ -1,2 +1,1 @@
-Please refer to link:https://aistudio.baidu.com/aistudio/projectdetail/336369, 
-the code availavle in aistudio. 
+The code is available in our machine
