--- a/code/readme
+++ b/code/readme
@@ -1,2 +1,1 @@
-The code is available in our machine,
-if you confront with some, you can ask me in 'Issues'
+The code is available, if you confront with some questions, you can ask me in 'Issues'
